flux/apps/base/demoapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: session-checker
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: session-checker
