flux/apps/base/demoapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: session-checker
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - backend:
              service:
                name: session-checker
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
